[project]
name = "Multi-Modal-Chat-App"
version = "0.1.0"
description = "Application on Streamlit to chat with any Text, Image and Video Inputs"
authors = [
    {name = "Abinav Ramesh", email = "abinavrameshs@gmail.com"},
]
dependencies = ["streamlit>=1.42.0", "google-genai>=1.2.0", "python-dotenv>=1.0.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GNU"}

[project.optional-dependencies]
video = [
    "opencv-python>=4.11.0.86",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
